    filesystem would always be considered "local", retain that from the
    POV of the {virtual,local,remote}-filesystems events, but do mount
    the root straight away when it's virtual since there's no device to
    wait until it's ready.  LP: #431204.
  * If a remote filesystem is already mounted and doesn't need a remount,
    don't wait for a network device to come up.  LP: #430348.

 -- Scott James Remnant <scott@ubuntu.com>  Mon, 21 Sep 2009 11:58:36 -0700

mountall (0.1.6) karmic; urgency=low

  [ Scott James Remnant ]
  * Restored mistakenly removed dh_installchangelogs & dh_installdocs.

  * Allow a further udev event for a block-device to retry swapon/mount
    after fsck has been already been completed for a prior event.
  * Massively reduce the pickyness of mountall when it comes to block
    devices; only expect ID_FS_USAGE and ID_FS_TYPE for dm and md devices,
    and don't actually expect the values.  For most people this won't make
    a difference, since we use UUID= anyway.  But for people with hardcoded
    /dev/sda1 in their fstab, which has multiple metadata, this won't break
    their boot.

  * Only include FHS filesystems in the {virtual,local,remote}-filesystems
    events.  This prevents an unmountable entry in fstab blocking things like
    starting D-Bus or the Network which are required to mount that filesystem.
    LP: #430880.
  * Never consider the root filesystem to be virtual or remote, even when
    it is, since we assert that it's already mounted so we don't have to
    take care of it.  LP: #431028.
  * Check whether filesystems mounted readonly when we start do not have
    "ro" in their fstab, before assuming we need to remount them.
    Readonly filesystems not in fstab (e.g. LiveCD, Wubi, etc.) never need
    remounting.  LP: #431028.
  * Only virtual filesystems will be mounted while the root filesystem is
    readonly, not filesystems such as /usr and /var.